<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:id="@+id/nav_header_container">
    
    <ImageView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitStart"
        android:src="@mipmap/ic_launcher"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="@+id/linearLayout" />
    
    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_mail"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    
    </LinearLayout>

</android.support.constraint.ConstraintLayout>